Navigation Invite Logic

--- a/_hbs/bandbattleCreate.hbs
+++ b/_hbs/bandbattleCreate.hbs
@@ -1,3 +1,10 @@
+<h1>No bandbattle joined:</h1>
+<h3>Create Bandbattle & Event?</h3>
+
+<input type="text" name="location" class="location" placeholder="Event Location"/>
+<input type="hidden" name="latitude" class="latitude" value="51.182845"/>
+<input type="hidden" name="longitude" class="longitude" value="3.581908"/>
+<input type="date" name="date" class="gigdate" placeholder="Event Date"/>
 <button name="create bandbattle" class="create-battle-btn">
-	knop
+	Create Bandbattle
 </button>
